# TetrisGame

./: .gitignore  CMakeLists.txt  README.md  index.html  main.cpp
.claude/: settings.local.json
cmake/: compile_options.cmake  install.cmake  qt6_runtime_dependency.cmake
qml/: qmldir
qml/basic/: TetrisConfig.qml  qmldir
qml/components/: BackgroundEffect.qml
src/: AudioEngine.cpp  AudioEngine.h  GameEngine.cpp  GameEngine.h
